// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: children transform > components > svelte 1`] = `
"import { resolveComponent as _resolveComponent, createComponent as _createComponent, insert as _insert, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const _component_Foo = _resolveComponent("Foo")
  const n1 = t0()
  const n0 = _createComponent(_component_Foo)
  _insert(n0, n1)
  return n1
}"
`;

exports[`compiler: children transform > components > vue 1`] = `
"import { resolveComponent as _resolveComponent, createComponent as _createComponent, insert as _insert, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const _component_Foo = _resolveComponent("Foo")
  const n1 = t0()
  const n0 = _createComponent(_component_Foo)
  _insert(n0, n1)
  return n1
}"
`;

exports[`compiler: children transform > native elements > svelte 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<div><div><p>Hello</p></div> <p>World</p></div>")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler: children transform > native elements > vue 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<div><div><p>Hello</p></div><p>World</p></div>")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler: children transform > sibling references > svelte 1`] = `
"import { next as _next, createTextNode as _createTextNode, insert as _insert, renderEffect as _renderEffect, setText as _setText, template as _template } from 'vue/vapor';
const t0 = _template("<div><p></p> <!><p></p></div>")

export function render(_ctx) {
  const n4 = t0()
  const n0 = n4.firstChild
  const n3 = _next(n0, 2)
  const n2 = n3.nextSibling
  const n1 = _createTextNode(() => [second, " ", third, " "])
  _insert(n1, n4, n3)
  _renderEffect(() => _setText(n0, first))
  _renderEffect(() => _setText(n2, forth))
  return n4
}"
`;

exports[`compiler: children transform > sibling references > vue 1`] = `
"import { next as _next, createTextNode as _createTextNode, insert as _insert, renderEffect as _renderEffect, setText as _setText, template as _template } from 'vue/vapor';
const t0 = _template("<div><p></p> <!><p></p></div>")

export function render(_ctx) {
  const n4 = t0()
  const n0 = n4.firstChild
  const n3 = _next(n0, 2)
  const n2 = n3.nextSibling
  const n1 = _createTextNode(() => [second, " ", third, " "])
  _insert(n1, n4, n3)
  _renderEffect(() => _setText(n0, first))
  _renderEffect(() => _setText(n2, forth))
  return n4
}"
`;
